wip: add armor automatism

--- a/src/scss/actor/parts/combat.scss
+++ b/src/scss/actor/parts/combat.scss
@@ -140,6 +140,7 @@
         .cold,
         .energy,
         .quality,
+        .integrity,
         .final-movement-restriction {
           .input-container {
             width: 2.75rem;
