--- a/src/scss/actor/parts/header.scss
+++ b/src/scss/actor/parts/header.scss
@@ -146,11 +146,11 @@
         grid-column-gap: 0.5rem;
       }
 
-      .initiative {
+      .second-row {
         margin-top: 0.5rem;
 
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
         grid-column-gap: 0.5rem;
       }
 
