--- a/src/templates/actor/parts/combat/parts/base-values.hbs
+++ b/src/templates/actor/parts/combat/parts/base-values.hbs
@@ -32,5 +32,12 @@
       inputName="data.combat.dodge.value"
       inputValue=data.data.combat.dodge.value
     }}
+    {{>
+    "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
+      class="wear-armor"
+      title=(localize "anima.ui.combat.baseValues.wearArmor.title")
+      inputName="data.combat.wearArmor.value"
+      inputValue=data.data.combat.wearArmor.value
+    }}
   {{/"systems/animabf/templates/common/ui/group-body.hbs"}}
 {{/"systems/animabf/templates/common/ui/group.hbs"}}
