--- a/src/templates/actor/parts/header/parts/common-resources.hbs
+++ b/src/templates/actor/parts/header/parts/common-resources.hbs
@@ -40,8 +40,7 @@
         class="natural-penalty"
         disabled=true
         title=(localize 'anima.ui.general.naturalPenalty.title')
-        inputName="data.general.modifiers.naturalPenalty.value"
-        inputValue=data.data.general.modifiers.naturalPenalty.value
+        inputValue=data.data.general.modifiers.naturalPenalty.byWearArmorRequirement.value
       }}
     </div>
     <div class='movements'>
