--- a/src/templates/actor/parts/header/parts/modifiers.hbs
+++ b/src/templates/actor/parts/header/parts/modifiers.hbs
@@ -19,8 +19,8 @@
     "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
       class="all-actions"
       title=(localize "anima.ui.general.modifiers.allActions.title")
-      inputName="data.general.modifiers.allActions.value"
-      inputValue=data.data.general.modifiers.allActions.value
+      inputName="data.general.modifiers.allActions.base.value"
+      inputValue=data.data.general.modifiers.allActions.base.value
     }}
   {{/"systems/animabf/templates/common/ui/group-body.hbs"}}
 {{/"systems/animabf/templates/common/ui/group.hbs"}}
