changes: remove none critic in first weapon ammo critic

--- a/src/templates/actor/parts/combat/parts/weapons.hbs
+++ b/src/templates/actor/parts/combat/parts/weapons.hbs
@@ -45,7 +45,7 @@
                 class="critic-secondary"
                 isVertical=true
                 disabled=true
-                choices=../../../this.config.iterables.combat.weapon.criticTypes
+                choices=../../../this.config.iterables.combat.weapon.criticTypesWithNone
                 title=(localize "anima.ui.combat.weapons.critic.secondary.title")
                 inputName=(concat "data.dynamic.weapons." this._id ".data.critic.secondary.value")
                 inputValue=this.data.critic.secondary.value
