--- a/src/templates/items/weapon/weapon.hbs
+++ b/src/templates/items/weapon/weapon.hbs
@@ -31,7 +31,7 @@
         {{> 'systems/animabf/templates/common/ui/custom-select-choices.hbs'
           class="critic-secondary"
           isVertical=true
-          choices=config.iterables.combat.weapon.criticTypes
+          choices=config.iterables.combat.weapon.criticTypesWithNone
           title=(localize "anima.ui.combat.weapons.critic.secondary.title")
           inputName=(concat "data.critic.secondary.value")
           inputValue=data.data.critic.secondary.value
