--- a/src/templates/actor/parts/mystic/parts/magic-projection.hbs
+++ b/src/templates/actor/parts/mystic/parts/magic-projection.hbs
@@ -14,8 +14,13 @@
       title=(localize "anima.ui.mystic.magicProjection.final.title")
       rollable=true
       rollableMessage=(localize "anima.ui.mystic.magicProjection.final.rollMessage")
-      inputName="data.mystic.magicProjection.final.value"
-      inputValue=data.data.mystic.magicProjection.final.value
+      inputName="data.mystic.magicProjection.base.value"
+      inputValue=data.data.mystic.magicProjection.base.value
+      hasSecondaryInput=true
+      disableSecondaryInput=true
+      rollSecondaryInput=true
+      secondaryInputName="data.mystic.magicProjection.final.value"
+      secondaryInputValue=data.data.mystic.magicProjection.final.value
     }}
     <h3 class='title'>{{localize "anima.ui.mystic.magicProjection.imbalance.title"}}</h3>
     <div class='imbalance'>
