changes: add tooltips

--- a/src/templates/actor/parts/combat/parts/base-values.hbs
+++ b/src/templates/actor/parts/combat/parts/base-values.hbs
@@ -17,6 +17,7 @@
       inputValue=data.data.combat.attack.base.value
       rollSecondaryInput=true
       hasSecondaryInput=true
+      addTooltips=true
       disableSecondaryInput=true
       secondaryInputName="data.combat.attack.final.value"
       secondaryInputValue=data.data.combat.attack.final.value
@@ -30,6 +31,7 @@
       inputValue=data.data.combat.block.base.value
       rollSecondaryInput=true
       hasSecondaryInput=true
+      addTooltips=true
       disableSecondaryInput=true
       secondaryInputName="data.combat.block.final.value"
       secondaryInputValue=data.data.combat.block.final.value
@@ -43,6 +45,7 @@
       inputValue=data.data.combat.dodge.base.value
       rollSecondaryInput=true
       hasSecondaryInput=true
+      addTooltips=true
       disableSecondaryInput=true
       secondaryInputName="data.combat.dodge.final.value"
       secondaryInputValue=data.data.combat.dodge.final.value
