--- a/src/templates/actor/parts/domine/parts/ki-accumulation.hbs
+++ b/src/templates/actor/parts/domine/parts/ki-accumulation.hbs
@@ -29,6 +29,7 @@
         inputName="data.domine.kiAccumulation.strength.current.value"
         inputValue=data.data.domine.kiAccumulation.strength.current.value
         hasSecondaryInput=true
+      addTooltips=true
         secondaryInputName="data.domine.kiAccumulation.strength.total.value"
         secondaryInputValue=data.data.domine.kiAccumulation.strength.total.value
       }}
@@ -51,6 +52,7 @@
         inputName="data.domine.kiAccumulation.agility.current.value"
         inputValue=data.data.domine.kiAccumulation.agility.current.value
         hasSecondaryInput=true
+      addTooltips=true
         secondaryInputName="data.domine.kiAccumulation.agility.total.value"
         secondaryInputValue=data.data.domine.kiAccumulation.agility.total.value
       }}
@@ -73,6 +75,7 @@
         inputName="data.domine.kiAccumulation.dexterity.current.value"
         inputValue=data.data.domine.kiAccumulation.dexterity.current.value
         hasSecondaryInput=true
+      addTooltips=true
         secondaryInputName="data.domine.kiAccumulation.dexterity.total.value"
         secondaryInputValue=data.data.domine.kiAccumulation.dexterity.total.value
       }}
@@ -95,6 +98,7 @@
         inputName="data.domine.kiAccumulation.constitution.current.value"
         inputValue=data.data.domine.kiAccumulation.constitution.current.value
         hasSecondaryInput=true
+      addTooltips=true
         secondaryInputName="data.domine.kiAccumulation.constitution.total.value"
         secondaryInputValue=data.data.domine.kiAccumulation.constitution.total.value
       }}
@@ -117,6 +121,7 @@
         inputName="data.domine.kiAccumulation.willPower.current.value"
         inputValue=data.data.domine.kiAccumulation.willPower.current.value
         hasSecondaryInput=true
+      addTooltips=true
         secondaryInputName="data.domine.kiAccumulation.willPower.total.value"
         secondaryInputValue=data.data.domine.kiAccumulation.willPower.total.value
       }}
@@ -139,6 +144,7 @@
         inputName="data.domine.kiAccumulation.power.current.value"
         inputValue=data.data.domine.kiAccumulation.power.current.value
         hasSecondaryInput=true
+      addTooltips=true
         secondaryInputName="data.domine.kiAccumulation.power.total.value"
         secondaryInputValue=data.data.domine.kiAccumulation.power.total.value
       }}
@@ -153,6 +159,7 @@
         inputName="data.domine.kiAccumulation.generic.value"
         inputValue=data.data.domine.kiAccumulation.generic.value
         hasSecondaryInput=true
+      addTooltips=true
         secondaryInputName="data.domine.kiAccumulation.generic.max"
         secondaryInputValue=data.data.domine.kiAccumulation.generic.max
       }}
