--- a/src/templates/actor/parts/header/parts/common-resources.hbs
+++ b/src/templates/actor/parts/header/parts/common-resources.hbs
@@ -12,6 +12,8 @@
         inputName="data.characteristics.secondaries.lifePoints.value"
         inputValue=data.data.characteristics.secondaries.lifePoints.value
         hasSecondaryInput=true
+        addTooltips=true
+        addTooltips=true
         secondaryInputName="data.characteristics.secondaries.lifePoints.max"
         secondaryInputValue=data.data.characteristics.secondaries.lifePoints.max
       }}
