--- a/src/templates/actor/parts/mystic/parts/act.hbs
+++ b/src/templates/actor/parts/mystic/parts/act.hbs
@@ -15,6 +15,7 @@
       inputName="data.mystic.act.main.base.value"
       inputValue=data.data.mystic.act.main.base.value
       hasSecondaryInput=true
+      addTooltips=true
       disableSecondaryInput=true
       secondaryInputName="data.mystic.act.main.final.value"
       secondaryInputValue=data.data.mystic.act.main.final.value
@@ -26,6 +27,7 @@
       inputName="data.mystic.act.alternative.base.value"
       inputValue=data.data.mystic.act.alternative.base.value
       hasSecondaryInput=true
+      addTooltips=true
       disableSecondaryInput=true
       secondaryInputName="data.mystic.act.alternative.final.value"
       secondaryInputValue=data.data.mystic.act.alternative.final.value
