--- a/src/templates/actor/parts/mystic/parts/magic-projection.hbs
+++ b/src/templates/actor/parts/mystic/parts/magic-projection.hbs
@@ -17,6 +17,7 @@
       inputName="data.mystic.magicProjection.base.value"
       inputValue=data.data.mystic.magicProjection.base.value
       hasSecondaryInput=true
+      addTooltips=true
       disableSecondaryInput=true
       rollSecondaryInput=true
       secondaryInputName="data.mystic.magicProjection.final.value"
