--- a/src/templates/actor/parts/mystic/parts/summoning.hbs
+++ b/src/templates/actor/parts/mystic/parts/summoning.hbs
@@ -18,6 +18,7 @@
           inputName="data.mystic.summoning.summon.base.value"
           inputValue=data.data.mystic.summoning.summon.base.value
           hasSecondaryInput=true
+          addTooltips=true
           disableSecondaryInput=true
           rollSecondaryInput=true
           secondaryInputName="data.mystic.summoning.summon.final.value"
@@ -31,6 +32,7 @@
           inputName="data.mystic.summoning.bind.base.value"
           inputValue=data.data.mystic.summoning.bind.base.value
           hasSecondaryInput=true
+          addTooltips=true
           disableSecondaryInput=true
           rollSecondaryInput=true
           secondaryInputName="data.mystic.summoning.bind.final.value"
@@ -46,6 +48,7 @@
           inputName="data.mystic.summoning.control.base.value"
           inputValue=data.data.mystic.summoning.control.base.value
           hasSecondaryInput=true
+          addTooltips=true
           disableSecondaryInput=true
           rollSecondaryInput=true
           secondaryInputName="data.mystic.summoning.control.final.value"
@@ -59,6 +62,7 @@
           inputName="data.mystic.summoning.banish.base.value"
           inputValue=data.data.mystic.summoning.banish.base.value
           hasSecondaryInput=true
+          addTooltips=true
           disableSecondaryInput=true
           rollSecondaryInput=true
           secondaryInputName="data.mystic.summoning.banish.final.value"
