--- a/src/templates/actor/parts/mystic/parts/zeon-regeneration.hbs
+++ b/src/templates/actor/parts/mystic/parts/zeon-regeneration.hbs
@@ -15,6 +15,7 @@
       inputName="data.mystic.zeonRegeneration.base.value"
       inputValue=data.data.mystic.zeonRegeneration.base.value
       hasSecondaryInput=true
+      addTooltips=true
       disableSecondaryInput=true
       secondaryInputName="data.mystic.zeonRegeneration.final.value"
       secondaryInputValue=data.data.mystic.zeonRegeneration.final.value
