--- a/src/templates/actor/parts/mystic/parts/zeon.hbs
+++ b/src/templates/actor/parts/mystic/parts/zeon.hbs
@@ -15,6 +15,7 @@
       inputName="data.mystic.zeon.value"
       inputValue=data.data.mystic.zeon.value
       hasSecondaryInput=true
+      addTooltips=true
       secondaryInputName="data.mystic.zeon.max"
       secondaryInputValue=data.data.mystic.zeon.max
     }}
