--- a/src/templates/actor/parts/psychic/parts/psychic-points.hbs
+++ b/src/templates/actor/parts/psychic/parts/psychic-points.hbs
@@ -15,6 +15,7 @@
       inputName="data.psychic.psychicPoints.value"
       inputValue=data.data.psychic.psychicPoints.value
       hasSecondaryInput=true
+      addTooltips=true
       secondaryInputName="data.psychic.psychicPoints.max"
       secondaryInputValue=data.data.psychic.psychicPoints.max
     }}
