--- a/src/templates/actor/parts/psychic/parts/psychic-potential.hbs
+++ b/src/templates/actor/parts/psychic/parts/psychic-potential.hbs
@@ -16,6 +16,7 @@
       inputName="data.psychic.psychicPotential.base.value"
       inputValue=data.data.psychic.psychicPotential.base.value
       hasSecondaryInput=true
+      addTooltips=true
       disableSecondaryInput=true
       rollSecondaryInput=true
       secondaryInputName="data.psychic.psychicPotential.final.value"
