--- a/src/templates/actor/parts/psychic/parts/psychic-projection.hbs
+++ b/src/templates/actor/parts/psychic/parts/psychic-projection.hbs
@@ -17,6 +17,7 @@
       inputName="data.psychic.psychicProjection.base.value"
       inputValue=data.data.psychic.psychicProjection.base.value
       hasSecondaryInput=true
+      addTooltips=true
       disableSecondaryInput=true
       rollSecondaryInput=true
       secondaryInputName="data.psychic.psychicProjection.final.value"
