--- a/src/templates/actor/parts/secondaries/common/secondary-skill.hbs
+++ b/src/templates/actor/parts/secondaries/common/secondary-skill.hbs
@@ -18,6 +18,7 @@
         inputName=(concat "data.secondaries." ../this.secondarySkillName "." key ".base.value")
         inputValue=atr.base.value
         hasSecondaryInput=true
+        addTooltips=true
         disableSecondaryInput=true
         secondaryInputName=(concat "data.secondaries." ../this.secondarySkillName "." key ".final.value")
         secondaryInputValue=atr.final.value
