--- a/src/templates/actor/parts/domine/parts/martial-knowledge.hbs
+++ b/src/templates/actor/parts/domine/parts/martial-knowledge.hbs
@@ -15,6 +15,7 @@
       inputName="data.domine.martialKnowledge.used.value"
       inputValue=data.data.domine.martialKnowledge.used.value
       hasSecondaryInput=true
+      addTooltips=true
       secondaryInputName="data.domine.martialKnowledge.max.value"
       secondaryInputValue=data.data.domine.martialKnowledge.max.value
     }}
