--- a/src/templates/actor/parts/combat/parts/weapons.hbs
+++ b/src/templates/actor/parts/combat/parts/weapons.hbs
@@ -51,9 +51,9 @@
                 inputValue=this.data.critic.secondary.value
               }}
             {{/if}}
-            {{>
-            "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
+            {{> 'systems/animabf/templates/common/domain/select-quality.hbs'
               class="quality"
+              isVertical=true
               title=(localize "anima.ui.combat.weapons.quality.title")
               inputName=(concat "data.dynamic.weapons." this._id ".data.quality.value")
               inputValue=this.data.quality.value
